--- a/week_2/8_gps1_1/gps1.1.css
+++ b/week_2/8_gps1_1/gps1.1.css
@@ -1,1 +1,20 @@
-/* include your css here */
+html{
+    background-color:rgb(0,0,0);
+    background-image:url(http://www.zingerbugimages.com/backgrounds/wrinkled_lime_green_paper_background_1800x1600.jpg);
+    background-position:center center;
+    background-repeat:no-repeat;
+    background-attachment:fixed;
+    }
+    
+        #Left-Side {
+            float: left;
+            border: 3px solid ;
+            width: 47%;
+            height: 200px;
+        }
+        #Right-Side {
+            float: right;
+            border : 3px solid;
+            width: 47%;
+            height: 200px;
+        }
